# TechnicianRoutingCG

./: .gitignore  CMakeLists.txt  README.md  main.cpp  main_bp.cpp  main_compact.cpp  main_genetic.cpp  main_route_testing.cpp  pathwyse.set  pathwyse_2.set  pathwyse_cyclic.set  pathwyse_def.set
cmake/: FindGUROBI.cmake
data/: instance_1.json
nlohmann/: json.hpp
pathwyse/core/: solver.cpp  solver.h
pathwyse/core/algorithms/: algorithm.cpp  algorithm.h
pathwyse/core/algorithms/dynamic_programming/PW_acyclic/: LM_acyclic.cpp  LM_acyclic.h
pathwyse/core/algorithms/dynamic_programming/PW_default/: LM_default.cpp  LM_default.h  PW_default.cpp  PW_default.h
pathwyse/core/algorithms/labels/: label.h
pathwyse/core/algorithms/preprocessing/: dijkstra.cpp  dijkstra.h
pathwyse/core/data/: path.cpp  path.h  problem.cpp  problem.h  resource_data.h
pathwyse/core/resources/: capacity.h  defaultcost.cpp  defaultcost.h  node_limit.h  resource.h  time.h  time_windows.cpp  time_windows.h
pathwyse/core/utils/: constants.h  param.cpp  param.h
pathwyse/wrapper_python/: wrapper.cpp
src/: RMP_solver.cpp  RMP_solver.h  analysis.cpp  analysis.h  branch_and_price.cpp  branch_and_price.h  cg_solver.cpp  cg_solver.h  column_generation.cpp  column_generation.h  compact_solution.h  compact_solver.cpp  compact_solver.h  constants.h  genetic_solver.cpp  genetic_solver.h  heuristics.cpp  heuristics.h  instance.cpp  instance.h  lunch.cpp  lunch.h  main_branch_price.cpp  main_column_generation.cpp  main_compact_formulation.cpp  main_genetic_algorithm.cpp  main_route_testing.cpp  main_testing.cpp  master.cpp  master.h  parser copy.cpp  parser.cpp  parser.h  plot.cpp  plot.h  preprocessing.cpp  preprocessing.h  pricing.cpp  pricing.h  quality_plot.cpp  (+10 more)
src/algorithms/: branch_and_price.cpp  branch_and_price.h  column_generation.cpp  column_generation.h  full_procedure.cpp  full_procedure.h  genetic_solver.cpp  genetic_solver.h  heuristics.cpp  heuristics.h  parameters.cpp  parameters.h  sequential_column_generation.cpp  sequential_column_generation.h
src/clustering/: clustering.cpp  clustering.h
src/compact_formulation/: compact_solution.h  compact_solver.cpp  compact_solver.h  solution_converter.h
src/data_analysis/: analysis.cpp  analysis.h  export.cpp  export.h  plot.cpp  plot.h
src/instance/: constants.h  instance.cpp  instance.h  parser.cpp  parser.h  preprocessing.cpp  preprocessing.h
src/master_problem/: integer_solution.cpp  integer_solution.h  master.cpp  master.h  master_solver.cpp  master_solver.h  node.cpp  node.h  rmp_solver.cpp  rmp_solver.h  solver2.cpp  solver2.h  solver_min.cpp  solver_min.h
src/pricing/: pricing.cpp  pricing.h  pricing_allinone.cpp
src/pricing_file/: pricing_file.cpp  pricing_file.h
src/pricing_old/: pricing_allinone.h  pricing_file.cpp  pricing_file.h
src/pricing_problem/: full_pricing.cpp  full_pricing.h  pricing.cpp  pricing.h  subproblem.cpp  subproblem.h  tabu.cpp  tabu.h  time_window_lunch.cpp  time_window_lunch.h
src/pulse/: pulse.cpp  pulse.h  pulse_grouped.cpp  pulse_grouped.h  pulse_grouped_multithreaded.cpp  pulse_grouped_multithreaded.h  pulse_multithreaded.cpp  pulse_multithreaded.h
src/repair/: repair.cpp  repair.h
src/routes/: route.cpp  route.h  route_optimizer.cpp  route_optimizer.h
src/test/: pathywse_test.cpp  test_instance.txt
